--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main>
         <h1>Jackson Eno | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Jackson Eno " width="200">
-        <p>Hello! My name is Jackson Eno and I am from Uyo,Nigeria.I enjoy web development</p>
+        <p>Hello! My name is Jackson and I am from Uyo,Nigeria.I enjoy web development</p>
     </main>
     <footer>
         <p>©2025💥Jackson Eno | Nigeria</p>
