--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Jackson Eno | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Jackson Eno " width="200">
+        <img src="images/profile.JPG" alt="Hello, my name is Jackson Eno " width="200">
         <p>Hello! My name is Jackson and I am from Uyo,Nigeria.I enjoy web development</p>
     </main>
     <footer>
