--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="jackson eno,wdd130,this home page is about rafting site mainly for recreation on white water">
+    <meta name="author" content="jackson Eno">
     <title>Jackson Eno | WDD 130 </title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
@@ -19,9 +23,13 @@
         <img src="images/profile.png" alt="Hello, my name is Jackson Eno" width="200">
         <p>Hello! My name is Jackson and I am from Uyo,Nigeria.I enjoy web development</p>
     </main>
+    <aside>
+        <h1>Uyo</h1>
+        <img src="images/Uyo stadium.jpg" alt="uyo international stadium">
+        <p>Uyo international sport stadium is located in Akwa ibom state in Nigeria.It is the largest stadium in the country with modern sport facilities, making it a home for all sporting activities.</p>
+    </aside>
     <footer>
         <p>©2025💥Jackson Eno | Nigeria</p>
     </footer>
 </body>
-
 </html>
