--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="jackson eno,wdd130,this home page is about rafting site mainly for recreation on white water">
     <meta name="author" content="jackson Eno">
     <title>Jackson Eno | WDD 130 </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 
@@ -24,8 +24,8 @@
         <p>Hello! My name is Jackson and I am from Uyo,Nigeria.I enjoy web development</p>
     </main>
     <aside>
-        <h1>Uyo</h1>
-        <img src="images/Uyo stadium.jpg" alt="uyo international stadium">
+        <h2>Uyo</h2>
+        <img src="images/uyo-stadium.jpg" alt="uyo international stadium">
         <p>Uyo international sport stadium is located in Akwa ibom state in Nigeria.It is the largest stadium in the country with modern sport facilities, making it a home for all sporting activities.</p>
     </aside>
     <footer>
