five stadium update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <aside>
         <h2>Uyo</h2>
         <img src="images/uyo-stadium.jpg" alt="uyo international stadium">
-        <p>Uyo international sport stadium is located in Akwa ibom state in Nigeria.It is the largest stadium in the country with modern sport facilities, making it a home for all sporting activities.</p>
+        <p>Uyo international sport stadium is located in Nigeria.It is the largest stadium in the country with modern sport facilities, making it a home for all sporting activities.</p>
     </aside>
     <footer>
         <p>©2025💥Jackson Eno | Nigeria</p>
