bryson city rafting 2

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,6 +25,7 @@
             <img src="../wwr/images/rafting.png" alt="rafting photo">
             <h1>Bryson City white water rafting Adventure</h1>
             <article>
+                <h2>Bryson exciting features</h2>
                 <img src="../wwr/images/client.png" alt="happy client photo">
                 <p>Bryson city offers white water rafting fun in the Nantahala Gorge.Nantahala river rafting is clearly the most popular for friends and family groups.</p>
             </article>
@@ -43,16 +44,18 @@
         <p>©2025 | Bryson city Rafting company | Jackson Eno</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="../wwr/images/facebook.png" alt="facebook icon">
+                <img src="../wwr/images/facebook.png">
             </a>
-            <a href="https://linkedln.com" alt="linked icon">
+            <a href="https://linkedln.com">
                 <img src="../wwr/images/link.png">
             </a>
             <a href="https://instagram.com">
-                <img src="../wwr/images/instagram.png" alt="instagram icon"
+                <img src="../wwr/images/instagram.png">
             </a>
-
-
-
         </nav>
     </footer>
+</body>
+</html>
+
+
+
