bryson city rafting  3

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="rapid adventure is a river rafting company that operates on the richterseld section  of the  orange river in south africa in Viooldrift. ">
     <meta name="author" content="jackson Eno">
-    <title>Jackson Eno | WDD 130 </title>
+    <title>About Us| Bryson city rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
 
 </head>
