--- a/wwr/about.html
+++ b/wwr/about.html
@@ -44,13 +44,13 @@
         <p>©2025 | Bryson city Rafting company | Jackson Eno</p>
         <nav class="socialmedia">
             <a href="https://facebook.com">
-                <img src="../wwr/images/facebook.png">
+                <img src="../wwr/images/facebook.png" alt="facebook">
             </a>
             <a href="https://linkedln.com">
-                <img src="../wwr/images/link.png">
+                <img src="../wwr/images/link.png" alt="link icon">
             </a>
             <a href="https://instagram.com">
-                <img src="../wwr/images/instagram.png">
+                <img src="../wwr/images/instagram.png" alt="instagram icon">
             </a>
         </nav>
     </footer>
