--- a/wwr/about.html
+++ b/wwr/about.html
@@ -35,7 +35,7 @@
             </article>
             <section class="main-section"> 
                 <h2>History</h2>
-                <img src="../wwr/images/white.png" alt="water front">
+                <img src="../wwr/images/white-water.png" alt="water front">
                 <p>Bryson city white rafting is native to Nantahala Gorge. it has unique features when it comes to white water rafting. Bryson city rafting is unique in it white water-wave and modern rafting machinery.I hereby recommend this rafting company to future and intending students and in organizations</p>
             </section>
                 
@@ -49,7 +49,7 @@
                     </figure>
                     
                     <figure class="photo-box">
-                        <img src="../wwr/images/white.png" alt="water-wave">
+                        <img src="../wwr/images/white-water.png" alt="water-wave">
                         <figcaption>High water-wave</figcaption>
                     </figure>
  
