--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" contact page gives more information about us.rapids city is a white water river rafting company that operates on the richterseld section  of the  orange river in south africa in Viooldrift. ."> ,
+    <meta name="description" content=" contact page gives more information about us.rapids city is a white water river rafting company that operates on the richterseld section  of the  orange river in south africa in Viooldrift."> 
     <meta name="author" content="jackson Eno">
     <title>contact Us | Rapids city rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
