--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="contact page of rapids city rafting company."> 
+    <meta name="description" content="contact page of rapids city rafting company,we are located in south africa focusing on white water and recreation"> 
     <meta name="author" content="jackson Eno">
     <title>contact Us | Rapids city rafting </title>
     <link rel="stylesheet" href="styles/rafting.css">
