--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,12 +8,13 @@
     <meta name="author" content="Jackson Eno">
     <title>Home page | WDD 130 </title>
     <link rel="stylesheet" href="styles/rafting.css">
+</head>
     <body>
         <header class="main-header">
             <div class="header-logo"></div> 
                 <img src="../wwr/images/logos.png" alt="company logo">
         
-            <nav class="header-nav">
+           <nav class="header-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
